support multiple middlewares, factory

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "benz": "*",
     "extend-shallow": "~2.0.0",
     "handle-arguments": "~3.0.2",
-    "is-extendable": "~0.1.1"
+    "is-extendable": "~0.1.1",
+    "manage-arguments": "~1.0.0"
   },
   "devDependencies": {
     "assertit": "^0.1.0",
